--- a/CopyOracleDatabaseToPostgresql/packages.config
+++ b/CopyOracleDatabaseToPostgresql/packages.config
@@ -6,9 +6,11 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Npgsql" version="8.0.6" targetFramework="net48" />
+  <package id="Oracle.ManagedDataAccess" version="21.17.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net48" />
+  <package id="System.Formats.Asn1" version="8.0.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
