add code for execute sql request

--- a/CopyOracleDatabaseToPostgresql/CopyOracleDatabaseToPostgresql.csproj
+++ b/CopyOracleDatabaseToPostgresql/CopyOracleDatabaseToPostgresql.csproj
@@ -127,6 +127,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\BddAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
